# Oscorp

./: .algokit.toml  .gitignore  Oscorp.code-workspace  README.md  render.yaml
backend/: .env.example  README.md  package.json  pyproject.toml
backend/app/: __init__.py
backend/app/agent/: orchestrator.py
backend/app/agents/articles/: __init__.py  agent.py  prompts.py  (+1 more)
backend/app/analytics/: __init__.py  company.py  competitors.py  documents.py  lighthouse.py  pipeline.py  scrape.py  seo.py  utils.py
backend/app/api/: main.py
backend/app/blockchain/: algorand.py
backend/app/chat/: chat_context.py  cmo_chat.py
backend/app/config/: settings.py
backend/app/core/: groq_client.py  json_utils.py  payment_constants.py  x402_middleware.py
backend/app/db/: supabase_client.py
backend/app/payments/: agent_deliverables.py  wallet_address.py
backend/app/providers/: client.py  stubs.py
backend/app/routes/: agents.py  analysis.py  chat.py  company.py  deliverables.py  session.py  users.py  workspace.py
backend/app/services/: algorand.py  content.py  draft_payload.py  growth_cycle.py  growth_research.py  payment_receipt.py  regenerate.py  telegram_agent.py  telegram_format.py  telegram_notify.py  wallet_address.py
backend/app/store/: memory.py  persist.py
backend/app/telegram/: bot.py  run_bot.py
backend/app/utils/: x_intent.py
backend/app/workspace/: service.py
backend/shared/: payment-constants.json
backend/supabase/: schema.sql
backend/tests/: test_payment_constants_sync.py
projects/Oscorp-agent/: .env.example  README.md  pyproject.toml
(+245 files in other folders)
