[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oscorp-agent"
version = "0.1.0"
description = "Oscorp autonomous agent runtime"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "click>=8.1",
    "rich>=13.7",
    "playwright>=1.52",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
oscorp-agent = "oscorp_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
